// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateCell renders a date value that represents a date in words and title through props 1`] = `
<cell-stub
  isflexible="true"
  title="title"
>
  <div
    class=""
  >
    
    March 6, 2018
    
    <!---->
  </div>
</cell-stub>
`;

exports[`DateCell renders a fallback value if isExpirable and no value 1`] = `
<cell-stub
  isflexible="true"
  title="title"
  value="Never"
>
  <!---->
</cell-stub>
`;

exports[`DateCell renders a string value that represents a date in words and title through props 1`] = `
<cell-stub
  isflexible="true"
  title="title"
>
  <div
    class=""
  >
    
    October 24, 2018
    
    <!---->
  </div>
</cell-stub>
`;

exports[`DateCell renders an expired warning if isExpirable and date value is before now 1`] = `
<cell-stub
  isflexible="true"
  title="title"
  value="Never"
>
  <div
    class="text-danger"
  >
    
    October 24, 2018
    
    <span>
       - Expired 
    </span>
  </div>
</cell-stub>
`;

exports[`DateCell renders date value with no warning if isExpirable and date value is after now 1`] = `
<cell-stub
  isflexible="true"
  title="title"
  value="Never"
>
  <div
    class=""
  >
    
    October 24, 2018
    
    <!---->
  </div>
</cell-stub>
`;
